fix: KnowledgePoint附件从本地磁盘迁移到MinIO
- upload/download/delete 全部改用 StorageService (MinIO)
- Docker 部署后附件持久化，不再丢失
- 移除 java.nio.file 依赖